--- a/modules/baokim/baokim.html
+++ b/modules/baokim/baokim.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <button class="btn" ng-click="updateButton()">Cập nhật</button>
 
-    <table id="table">
+    <table id="table" style="font-size: 12px">
         <tr>
             <td style="width: 90px;">Mã giao dịch</td>
             <td style="width: 100px;">Thời gian</td>
