--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <!--<li><a ui-sref="plus">Plus</a> </li>-->
         <li><a ui-sref="login">Đăng nhập</a> </li>
         <li ng-show="isLoggedInAdmin"><a ui-sref="baokim">Lịch sử giao dịch</a> </li>
+        <li ng-show="isLoggedInAdmin"><a ui-sref="trangthaihocphi">Trạng thái đóng tiền toàn trường</a> </li>
+        <li ng-show="isLoggedInParent"><a ui-sref="trangthaihocphi">Trạng thái đóng tiền của con em</a> </li>
         <li><a ui-sref="dongtien">Đóng tiền</a> </li>
         <li ng-show="isLoggedInStaff||isLoggedInParent||isLoggedInAdmin"><a href="#" ng-click="logOut()" >Log out</a> </li>
     </ul>
@@ -47,6 +49,7 @@
 <script src="modules/tweenMax/tweenMax.js"></script>
 <script src="modules/dongtien/dongtien.js"></script>
 <script src="modules/login/login.js"></script>
+<script src="modules/trangthaihocphi/trangthaihocphi.js"></script>
 
 <!--controller-->
 <script src="modules/about/aboutCtrl.js"></script>
@@ -59,6 +62,7 @@
 <script src="modules/tweenMax/tweenMaxCtrl.js"></script>
 <script src="modules/dongtien/dongtienCtrl.js"></script>
 <script src="modules/login/loginCtrl.js"></script>
+<script src="modules/trangthaihocphi/trangthaihocphiCtrl.js"></script>
 
 <!--service -->
 <script src="modules/plus/plusService.js"></script>
