--- a/modules/trangthaihocphi/trangthaihocphi.html
+++ b/modules/trangthaihocphi/trangthaihocphi.html
@@ -1,3 +1,20 @@
 <div>
-
+    <table id="paymenttable">
+        <tr>
+            <th>Tên học sinh</th>
+            <th>Mã lớp</th>
+            <th>Tên lớp</th>
+            <th>Mã phụ huynh</th>
+            <th>Tên phụ huynh</th>
+            <th>Trạng thái đóng tiền</th>
+        </tr>
+        <tr ng-repeat = "student in paymentList">
+            <td>{{student.studentName}}</td>
+            <td>{{student.classId}}</td>
+            <td>{{student.className}}</td>
+            <td>{{student.parentId}}</td>
+            <td>{{student.parentName}}</td>
+            <td>{{student.paymentStatus}}</td>
+        </tr>
+    </table>
 </div>
