--- a/modules/baokim/baokim.html
+++ b/modules/baokim/baokim.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
     <button class="btn" ng-click="updateButton()">Cập nhật</button>
 
-    <table id="table" style="font-size: 12px">
+    <table class="tablebaokim">
         <tr>
-            <td style="width: 90px;">Mã giao dịch</td>
-            <td style="width: 100px;">Thời gian</td>
-            <td style="width: 150px;">Loại giao dịch</td>
-            <td style="width: 140px;">Mã đơn hàng</td>
-            <td style="width: 140px;">Mô tả</td>
-            <td style="width: 150px;">Tên / Email</td>
-            <td style="width: 80px;">Kiểu</td>
-            <td style="width: 100px;">Số tiền</td>
-            <td style="width: 100px;">Số tiền chuyển</td>
-            <td style="width: 85px;">Trạng thái</td>
+            <th style="width: 90px;">Mã giao dịch</th>
+            <th style="width: 100px;">Thời gian</th>
+            <th style="width: 150px;">Loại giao dịch</th>
+            <th style="width: 140px;">Mã đơn hàng</th>
+            <th style="width: 140px;">Mô tả</th>
+            <th style="width: 150px;">Tên / Email</th>
+            <th style="width: 80px;">Kiểu</th>
+            <th style="width: 100px;">Số tiền</th>
+            <th style="width: 100px;">Số tiền chuyển</th>
+            <th style="width: 85px;">Trạng thái</th>
         </tr>
         <tr ng-repeat="record in table|orderBy:orderByField : true">
             <td>{{ record.maGiaoDich}}</td>
